more run/set tests and refactorings